logs_final.txt

[2025-12-29T04:11:38.580954Z] Severity: ERROR
Traceback (most recent call last):
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/arbiter.py", line 608, in spawn_worker
    worker.init_process()
    ~~~~~~~~~~~~~~~~~~~^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/workers/base.py", line 135, in init_process
    self.load_wsgi()
    ~~~~~~~~~~~~~~^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ~~~~~~~~~~~~~^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ~~~~~~~~~^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ~~~~~~~~~~~~~~~~~^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
  File "/layers/google.python.runtime/python/lib/python3.13/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 1023, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/workspace/main.py", line 26, in <module>
    from animals.mole import register_mole_handler
  File "/workspace/animals/mole.py", line 364
    ```
    ^
SyntaxError: invalid syntax

[2025-12-29T04:11:38.580902Z] Severity: None
[2025-12-29 04:11:38 +0000] [5] [ERROR] Exception in worker process

[2025-12-29T04:06:41.315898Z] Severity: ERROR
Traceback (most recent call last):
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/arbiter.py", line 608, in spawn_worker
    worker.init_process()
    ~~~~~~~~~~~~~~~~~~~^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/workers/base.py", line 135, in init_process
    self.load_wsgi()
    ~~~~~~~~~~~~~~^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ~~~~~~~~~~~~~^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ~~~~~~~~~^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ~~~~~~~~~~~~~~~~~^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^
  File "/layers/google.python.pip/pip/lib/python3.13/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
  File "/layers/google.python.runtime/python/lib/python3.13/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 1023, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/workspace/main.py", line 26, in <module>
    from animals.mole import register_mole_handler
  File "/workspace/animals/mole.py", line 364
    ```
    ^
SyntaxError: invalid syntax

[2025-12-29T04:06:41.315847Z] Severity: None
[2025-12-29 04:06:41 +0000] [6] [ERROR] Exception in worker process
